Fix navbar size, snackbar and suggestions spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,9 @@
     display: flex;
     justify-content: center;
     margin-top: 10rem;
-}
 
-.snackbar {
-    margin-bottom: 1rem;
+    @media (max-width: 600px) {
+        margin-top: 1rem;
+    }
+
 }
